# Wanted-Alarm-Project

./: .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
.github/workflows/: Blue-CD.yml  CI.yml  Green-CD.yml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: root_urls.py
config/settings/: base.py  dev.py  local.py
docker/: Dockerfile  docker-compose.yml
docker/nginx/: default.conf
