[tool.poetry]
name = "alarm-server"
version = "0.1.0"
description = ""
authors = ["sgaeng <ksge1124@gmail.com>", "SaJH <wogur981208@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
pymysql = "^1.1.0"
django-cors-headers = "^4.2.0"
pillow = "^10.0.0"
pydantic = "^2.3.0"
django-environ = "^0.11.2"
gunicorn = "^21.2.0"
django-debug-toolbar = "^4.2.0"
pre-commit = "^3.4.0"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"